added options <NzbDirInterval> and <NzbDirFileAge> to adjust interval and delay by monitoring of incoming-directory for new nzb-files
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@78 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/ChangeLog
+++ b/ChangeLog
@@ -64,6 +64,8 @@ nzbget-0.3.1:
   - Added remote-command "-V (--serverversion)" to print the server's version;
   - Added option "ThreadLimit" to prevent program from crash if it wants to 
     create too many threads (sometimes could occur in special cases);
+  - Added options "NzbDirInterval" and "NzbDirFileAge" to adjust interval and
+    delay by monitoring of incoming-directory for new nzb-files;
   - Fixed error on parsing of nzb-files containing percent and other special 
     characters in their names (bug appeared on windows only);
   - Reformated sample configuration file and changed default optionnames 
