small corrections in text-files
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@90 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/README
+++ b/README
@@ -311,8 +311,7 @@ mode, not to daemon mode).
 
 When the server is running it is possible to queue up downloads. This can be
 done either in terminal with "nzbget -A <nzb-file>" or by uploading
-a nzb-file into server's monitor-directory (<MAINDIR>/nzb by default, the
-directory must exist on server's start; otherwise it will not be monitored).
+a nzb-file into server's monitor-directory (<MAINDIR>/nzb by default).
 
 To check the status of server start client and connect it to server:
   
