added support for UU-format to internal decoder; removed support for uulib-decoder (it did not work well anyway); replaced the option <decoder (yenc, uulib, none)> with the option <decode (yes, no)>
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@115 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+nzbget-0.3.2-testing:
+  - see subversion-log on sourceforge.net:
+    http://nzbget.svn.sourceforge.net/viewvc/nzbget/trunk/?view=log
+  
 nzbget-0.3.1:
   - Greatly reduced the memory consumption by keeping articles' info on disk 
     until the file download starts;
