updated version-string (preparing to release 0.4.0)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@167 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-nzbget-0.4.0-testing:
+nzbget-0.4.0:
   - added the support for XML-RPC and JSON-RPC to easier control the server 
     from other applications; 
   - added web-interface - it is available for download from NZBGet-project's 
